<resources>
    <string name="app_name">QRCodeTP</string>
    <string name="listStudent">Students List</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="sexe">Sexe</string>
    <string name="adress">Adress</string>
    <string name="save">Save</string>
    <string name="age">Age</string>
    <string name="listPresence">Presences List</string>
    <string name="oui">Yes</string>
    <string name="non">No</string>
    <string name="textLgout">Are you sure!!!</string>
</resources>